@@ -151,13 +151,13 @@
 	@begin_itemize
 	@item{@code{GTAGS}(string)}
 		If this variable is set, its value is used as the
-		command line of the parser for GTAGS. The default is @file{gtags-parser %s}.
+		command line of the parser for GTAGS.
 	@item{@code{GRTAGS}(string)}
 		If this variable is set, its value is used as the
-		command line of the parser for GRTAGS. The default is @file{gtags-parser -r %s}.
+		command line of the parser for GRTAGS.
 	@item{@code{GSYMS}(string)}
 		If this variable is set, its value is used as the
-		command line of the parser for GSYMS. The default is @file{gtags-parser -s %s}.
+		command line of the parser for GSYMS.
 	@item{@code{icase_path}(boolean)}
 		Ignore case distinctions in the path.
 		Suffixes check are affected by this capability.
@@ -182,10 +182,6 @@
 		As a special exception, @name{gtags} collect values from multiple @code{suffixes} variables.
 		This variable is obsoleted. If the langmap variable is defined
 		@name{gtags} no longer refers this.
-	@item{@code{use_builtin_parser}(boolean)}
-		Use built-in parser instead of external command.
-		The following restrictions are in incremental updating with built-in parser:
-		If @file{GRTAGS} or @file{GSYMS} exists, both of them exist and the format should be the same.
 	@end_itemize
 @DIAGNOSTICS
 	@name{Gtags} exits with a non 0 value if an error occurred, 0 otherwise.
